--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "css-import",
+  "name": "grunt-css-import",
   "description": "Concat the css file by \"@import\".",
   "version": "0.1.0",
-  "homepage": "https://github.com/lackhurt/gruntjs",
+  "homepage": "https://github.com/lackhurt/grunt-css-import",
   "author": {
     "name": "lackhurt",
     "email": "pangjn@yeah.net"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/lackhurt/gruntjs.git"
+    "url": "git://github.com/lackhurt/grunt-css-import.git"
   },
   "bugs": {
-    "url": "https://github.com/lackhurt/gruntjs/issues"
+    "url": "https://github.com/lackhurt/grunt-css-import/issues"
   },
   "licenses": [
     {
