--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-css-import",
-  "description": "Concat the css file by \"@import\".",
-  "version": "0.1.0",
+  "description": "Concat the css file by \"@import\". The relative url of the background image will be changed automatically.",
+  "version": "0.1.6",
   "homepage": "https://github.com/lackhurt/grunt-css-import",
   "author": {
     "name": "lackhurt",
@@ -30,10 +30,10 @@
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.0"
   },
   "keywords": [
     "gruntplugin"
