--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-css-import",
   "description": "Concat the css file by \"@import\". The relative url of the background image will be changed automatically.",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "homepage": "https://github.com/lackhurt/grunt-css-import",
   "author": {
     "name": "lackhurt",
@@ -27,10 +27,10 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
+    "grunt": "~0.4.0",
     "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.0"
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-nodeunit": "^0.3.3"
   },
   "peerDependencies": {
     "grunt": "~0.4.0"
