--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
-sudo: false
 language: node_js
 node_js:
   - "0.12"
   - "0.11"
   - "0.10"
   - "0.8"
+
+before_script:
+  - npm install -g grunt-cli
